--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,8 +23,8 @@ jobs:
       run: |
         mamba install -c conda-forge cmake ninja compilers gdal opencv pcl boost eigen -y
 
-    # 3. CONSOLIDACIÓN Y CONFIGURACIÓN (Versión Anti-GitHub-Parser)
-    - name: Consolidate and Configure
+    # 3. CIRUGÍA DE CARPETAS (Copiar y Reestructurar)
+    - name: Surgical Consolidate
       shell: bash -l {0}
       run: |
         python -c "
@@ -32,90 +32,112 @@ jobs:
         import shutil
         import glob
         
-        # --- PARTE A: COPIAR ARCHIVOS ---
+        # Origen y Destino
         src_root = os.environ['CONDA_PREFIX']
-        # Definimos las rutas de destino locales
         dist_inc = os.path.abspath('MY_LIBS/include')
         dist_lib = os.path.abspath('MY_LIBS/lib')
         
-        os.makedirs(dist_inc, exist_ok=True)
-        os.makedirs(dist_lib, exist_ok=True)
+        # Limpiar y crear destino
+        if os.path.exists('MY_LIBS'):
+            shutil.rmtree('MY_LIBS')
+        os.makedirs(dist_inc)
+        os.makedirs(dist_lib)
         
-        print(f'Consolidando librerías en: {dist_inc}')
+        print(f'Buscando tesoros en: {src_root}')
         
+        # --- 1. ENCONTRAR Y COPIAR EIGEN ---
+        # El objetivo es tener MY_LIBS/include/Eigen
         eigen_found = False
-        
         for root, dirs, files in os.walk(src_root):
-            # 1. COPIAR EIGEN (Buscamos carpeta que tenga StdVector)
             if 'StdVector' in files:
+                # Encontramos .../algo/Eigen/StdVector
                 if root.endswith('Eigen'):
+                    print(f'Eigen encontrado en: {root}')
+                    # Copiamos la carpeta 'Eigen' entera a 'MY_LIBS/include/Eigen'
                     target = os.path.join(dist_inc, 'Eigen')
                     if not os.path.exists(target):
-                        print(f'Copiando Eigen desde: {root}')
                         shutil.copytree(root, target)
                         eigen_found = True
+                        print('-> Eigen copiado exitosamente.')
+                        break # Ya lo tenemos, dejamos de buscar
 
-            # 2. COPIAR PCL (Buscamos carpeta raiz 'pcl')
+        if not eigen_found:
+            print('ERROR FATAL: No se encontró Eigen. Intentando ruta hardcoded...')
+            hardcoded = os.path.join(src_root, 'Library/include/eigen3/Eigen')
+            if os.path.exists(hardcoded):
+                shutil.copytree(hardcoded, os.path.join(dist_inc, 'Eigen'))
+                print('-> Eigen copiado desde ruta hardcoded.')
+
+        # --- 2. ENCONTRAR Y COPIAR PCL ---
+        # El objetivo es tener MY_LIBS/include/pcl
+        pcl_found = False
+        for root, dirs, files in os.walk(src_root):
             if 'pcl_base.h' in files:
-                if root.endswith('pcl'):
+                # Encontramos .../algo/pcl/pcl_base.h
+                # La carpeta 'root' es '.../pcl'. Esa es la que queremos copiar.
+                path_parts = root.replace('\\\\', '/').split('/')
+                if path_parts[-1] == 'pcl':
+                    print(f'PCL encontrado en: {root}')
                     target = os.path.join(dist_inc, 'pcl')
                     if not os.path.exists(target):
-                        print(f'Copiando PCL desde: {root}')
                         shutil.copytree(root, target)
-            
-            # 3. COPIAR LIBRERÍAS .LIB
+                        pcl_found = True
+                        print('-> PCL copiado exitosamente.')
+                        break
+
+        # --- 3. COPIAR LIBRERÍAS .LIB ---
+        count_libs = 0
+        for root, dirs, files in os.walk(src_root):
             for f in files:
                 if f.endswith('.lib'):
+                    # Filtro de seguridad
                     if any(x in f for x in ['pcl_', 'opencv_', 'boost_', 'gdal_i']):
                         try:
                             shutil.copy2(os.path.join(root, f), os.path.join(dist_lib, f))
-                        except Exception as e:
-                            pass # Ignorar errores de archivos en uso o duplicados
+                            count_libs += 1
+                        except: pass
+        print(f'-> {count_libs} librerías .lib copiadas.')
 
-        # Fallback para Eigen
-        if not eigen_found:
-            fallback = os.path.join(src_root, 'Library/include/eigen3/Eigen')
-            if os.path.exists(fallback):
-                 if not os.path.exists(os.path.join(dist_inc, 'Eigen')):
-                     shutil.copytree(fallback, os.path.join(dist_inc, 'Eigen'))
+        # --- 4. VERIFICACIÓN (AUTOPSIA) ---
+        print('\n--- VERIFICACIÓN DE MY_LIBS/include ---')
+        if os.path.exists(dist_inc):
+            print(os.listdir(dist_inc))
+            # Verificamos si Eigen está dentro
+            if os.path.exists(os.path.join(dist_inc, 'Eigen')):
+                print('CHECK: Carpeta Eigen existe.')
+            else:
+                print('FAIL: Carpeta Eigen NO existe.')
+        else:
+            print('FAIL: Carpeta include ni siquiera se creó.')
+
+        # --- 5. GENERAR CMAKELISTS.TXT ---
+        inc_str = dist_inc.replace(os.sep, '/')
+        lib_str = dist_lib.replace(os.sep, '/') + '/*.lib'
         
-        # --- PARTE B: GENERAR CMAKELISTS.TXT (SIN LLAVES DE GITHUB) ---
+        # Truco para las llaves de GitHub
+        var_start = '$' + '{ALL_LIBS}'
         
-        # Normalizamos las rutas para CMake (slash normal)
-        inc_path_str = dist_inc.replace(os.sep, '/')
-        lib_glob_str = dist_lib.replace(os.sep, '/') + '/*.lib'
-        
-        # Construimos el contenido en partes para no confundir a GitHub Actions
-        
-        # 1. Encabezado (f-string normal de Python)
-        cmake_header = f'''
+        cmake_txt = f'''
         cmake_minimum_required(VERSION 3.5)
         project(odm_orthophoto)
         set(CMAKE_CXX_STANDARD 14)
         add_definitions(-D_CRT_SECURE_NO_WARNINGS -DNOMINMAX -DBOOST_USE_WINDOWS_H)
         
-        # Incluimos nuestra carpeta consolidada
-        include_directories(\"{inc_path_str}\")
+        # Incluimos nuestra carpeta verificada
+        include_directories(\"{inc_str}\")
         include_directories(\"src\")
         
-        # Le decimos a CMake que busque todos los .lib
-        file(GLOB ALL_LIBS \"{lib_glob_str}\")
+        file(GLOB ALL_LIBS \"{lib_str}\")
         
         add_executable(odm_orthophoto src/OdmOrthoPhoto.cpp src/Logger.cpp src/main.cpp)
+        
+        target_link_libraries(odm_orthophoto {var_start})
         '''
         
-        # 2. Pie de página (Truco: Concatenamos el signo de dólar separado)
-        # Así GitHub Actions no ve las llaves juntas y no intenta parsear nada.
-        var_start = '$' + '{ALL_LIBS}'
-        cmake_footer = f'target_link_libraries(odm_orthophoto {var_start})'
-        
-        final_content = cmake_header + '\\n' + cmake_footer
-        
         with open('CMakeLists.txt', 'w') as f:
-            f.write(final_content)
-            
-        print('--- CMakeLists.txt generado ---')
-        print(final_content)
+            f.write(cmake_txt)
+        
+        print('--- CMakeLists.txt Listo ---')
         "
 
     # 4. COMPILACIÓN
